<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorBackgroundAuth"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="br.com.futfatec.activity.AuthActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="56sp"
        android:layout_height="56sp"
        android:layout_gravity="center"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/layoutAuth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="visible"
        android:orientation="vertical">
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="-72sp"
        android:layout_marginBottom="32sp"
        android:textColor="@android:color/black"
        android:text="@string/welcome_text"/>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_marginBottom="24sp"
        android:textColor="@android:color/black"
        android:text="@string/access_id_descricao"/>
    <EditText
        android:id="@+id/edtPalavraChave"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:hint="@string/access_id_label"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:textSize="18sp"
        android:onClick="enviar"
        android:background="@color/colorBackgroundButton"
        android:textColor="@android:color/white"
        android:text="@string/submit_button_auth"/>
    </LinearLayout>
</LinearLayout>
